class DiagrammeClasse:

    def __init__(self, nom):
        self.nom = nom
        self.classes = []

    def get_liste_classes(self):
        return self.classes
