from enum import Enum


class LangageSortie(Enum):
    JAVA = "JAVA"
    CPP = "CPP"
    PYTHON = "PYTHON"
